🩹 Fix: text overlaps in drawer menu on extremely narrow screen [#48]

--- a/assets/stylesheets/header.scss
+++ b/assets/stylesheets/header.scss
@@ -1,10 +1,11 @@
 // © 2022 REVATI
 
 @use '/assets/stylesheets/variables/color' as *;
+@use '/assets/stylesheets/variables/mixin' as *;
 
 li {
 	list-style: none;
-	margin: 10px 12px 2px 10px;
+	margin: 1px 12px 3px 10px;
 
 	&:last-child {
 		margin-right: 2.6em;
@@ -34,5 +35,15 @@ li {
 		&:hover::after {
 			transform: scaleX(112%);
 		}
+	}
+}
+
+@media screen and (max-height: 618px) {
+	ul {
+		left: calc(50vw - 95px) !important;
+	}
+
+	li a {
+		font-size: 23px;
 	}
 }
